[Version 1.2 Update]

Added:
- Added a button with a cooldown in the settlement settings menu to enable/disable settlement pvp
- Added a config option to enable or disable new settlement level changes
- Added a config option to enable or disable the requirement of a settler owner being online in order to kill the settlers
- Added a take-over mechanic for settlements with pvp enabled. Requires all settlers to be dead and a claiming scroll in the player's inventory, who's trying to take over the settlement
- Added a "Quick transfer to inventory" check box to the blacksmith's geode breaking menu, to transfer the result to the inventory directly so you don't have to perform 2 clicks per geode

Changes:
- Included a discord link in the mod description
- A confirmation box will now appear when un-claiming a settlement to avoid miss clicks
- The settlement flag is now unbreakable by normal means, only the settlement owner can break the flag through the settings menu
- The placement of multiple flags in a single settlement is now disabled; This can be enabled again in the config file, but it's recommended to keep it the way it is
- Settlement islands with pvp off will disable the ability to break and place things for non-settlement members
- Settlers that are a part of a player's settlement can not be killed by another player unless PLAYER pvp is toggled
- If your settlement is pvp enabled and hostile players are in the settlement level, you won't be able to change settlement privacy, or unclaim/destroy the flag
- Entering a settlement's island that has pvp toggled will automatically force you into pvp

Fixes:
- Fixed the study table recipe not appearing in the demonic workshop, thanks DecayedBit for the report