@@ -63,7 +63,7 @@ blueprintpinbutton=Pin Required Items
 blueprintwalls=Wall:
 blueprintfloor=Floor:
 blueprintfurniture=Wood:
-blueprintrecipeheader=Required Items:\n
+blueprintrecipeheader=Required Items:
 settlementunsafe=§6Action is not available in unsafe conditions\n§6A hostile player is currently in the settlement
 settlementenablepvp=Enable PvP
 settlementdisablepvp=Disable PvP
